@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -52,31 +52,36 @@ public abstract class XMLStreamReaderFactory {
     private static final String CLASS_NAME_OF_WSTXINPUTFACTORY = "com.ctc.wstx.stax.WstxInputFactory";
 
     /**
+     * Default constructor.
+     */
+    protected XMLStreamReaderFactory() {}
+
+    /**
      * Singleton instance.
      */
     private static volatile ContextClassloaderLocal<XMLStreamReaderFactory> streamReader =
-            new ContextClassloaderLocal<XMLStreamReaderFactory>() {
+            new ContextClassloaderLocal<>() {
 
                 @Override
                 protected XMLStreamReaderFactory initialValue() {
-    
+
                     XMLInputFactory xif = getXMLInputFactory();
-                    XMLStreamReaderFactory f=null;
+                    XMLStreamReaderFactory f = null;
 
                     // this system property can be used to disable the pooling altogether,
                     // in case someone hits an issue with pooling in the production system.
-                    if(!MrJarUtil.getNoPoolProperty(XMLStreamReaderFactory.class.getName())) {
+                    if (!MrJarUtil.getNoPoolProperty(XMLStreamReaderFactory.class.getName())) {
                         f = Zephyr.newInstance(xif);
                     }
 
-                    if(f==null) {
+                    if (f == null) {
                         // is this Woodstox?
                         if (xif.getClass().getName().equals(CLASS_NAME_OF_WSTXINPUTFACTORY)) {
                             f = new Woodstox(xif);
                         }
                     }
 
-                    if (f==null) {
+                    if (f == null) {
                         f = new Default();
                     }
 
@@ -91,7 +96,7 @@ public abstract class XMLStreamReaderFactory {
         XMLInputFactory xif = null;
         if (getProperty(XMLStreamReaderFactory.class.getName()+".woodstox")) {
             try {
-                xif = (XMLInputFactory)Class.forName("com.ctc.wstx.stax.WstxInputFactory").newInstance();
+                xif = (XMLInputFactory)Class.forName("com.ctc.wstx.stax.WstxInputFactory").getConstructor().newInstance();
             } catch (Exception e) {
                 if (LOGGER.isLoggable(Level.WARNING)) {
                     LOGGER.log(Level.WARNING, StreamingMessages.WOODSTOX_CANT_LOAD(CLASS_NAME_OF_WSTXINPUTFACTORY), e);
@@ -99,12 +104,13 @@ public abstract class XMLStreamReaderFactory {
             }
         }
         if (xif == null) {
-             xif = XmlUtil.newXMLInputFactory(true);
+             xif = XmlUtil.newXMLInputFactory(false);
         }
         xif.setProperty(XMLInputFactory.IS_NAMESPACE_AWARE, true);
         xif.setProperty(XMLInputFactory.SUPPORT_DTD, false);
         xif.setProperty(XMLInputFactory.IS_COALESCING, true);
-        
+        xif.setProperty(XMLInputFactory.IS_SUPPORTING_EXTERNAL_ENTITIES, false);
+
         return xif;
     }
 
@@ -136,7 +142,9 @@ public abstract class XMLStreamReaderFactory {
             }
 
             // Otherwise, open URI
-            return get().doCreate(source.getSystemId(), new URL(source.getSystemId()).openStream(),rejectDTDs);
+            InputStream is = new URL(source.getSystemId()).openStream();
+            source.setByteStream(is);
+            return get().doCreate(source.getSystemId(), is, rejectDTDs);
         } catch (IOException e) {
             throw new XMLReaderException("stax.cantCreate",e);
         }
@@ -223,7 +231,7 @@ public abstract class XMLStreamReaderFactory {
     private static final class Zephyr extends XMLStreamReaderFactory {
         private final XMLInputFactory xif;
 
-        private final ThreadLocal<XMLStreamReader> pool = new ThreadLocal<XMLStreamReader>();
+        private final ThreadLocal<XMLStreamReader> pool = new ThreadLocal<>();
 
         /**
          * Sun StAX impl <code>XMLReaderImpl.setInputSource()</code> method via reflection.
@@ -254,11 +262,10 @@ public abstract class XMLStreamReaderFactory {
                 if(!(clazz.getName().startsWith("com.sun.xml.stream.")) )
                     return null;    // nope
                 return new Zephyr(xif,clazz);
-            } catch (NoSuchMethodException e) {
+            } catch (NoSuchMethodException | XMLStreamException e) {
                 return null;    // this factory is not for zephyr
-            } catch (XMLStreamException e) {
-                return null;    // impossible to fail to parse <foo/>, but anyway
-            }
+            } // impossible to fail to parse <foo/>, but anyway
+
         }
 
         public Zephyr(XMLInputFactory xif, Class clazz) throws NoSuchMethodException {
@@ -304,11 +311,7 @@ public abstract class XMLStreamReaderFactory {
                 is.setByteStream(in);
                 reuse(xsr,is);
                 return xsr;
-            } catch (IllegalAccessException e) {
-                throw new XMLReaderException("stax.cantCreate",e);
-            } catch (InvocationTargetException e) {
-                throw new XMLReaderException("stax.cantCreate",e);
-            } catch (XMLStreamException e) {
+            } catch (IllegalAccessException | XMLStreamException | InvocationTargetException e) {
                 throw new XMLReaderException("stax.cantCreate",e);
             }
         }
@@ -325,7 +328,7 @@ public abstract class XMLStreamReaderFactory {
                 is.setCharacterStream(in);
                 reuse(xsr,is);
                 return xsr;
-            } catch (IllegalAccessException e) {
+            } catch (IllegalAccessException | XMLStreamException e) {
                 throw new XMLReaderException("stax.cantCreate",e);
             } catch (InvocationTargetException e) {
                 Throwable cause = e.getCause();
@@ -333,8 +336,6 @@ public abstract class XMLStreamReaderFactory {
                     cause = e;
                 }
                 throw new XMLReaderException("stax.cantCreate", cause);
-            } catch (XMLStreamException e) {
-                throw new XMLReaderException("stax.cantCreate",e);
             }
         }
 
@@ -356,12 +357,17 @@ public abstract class XMLStreamReaderFactory {
      */
     public static final class Default extends XMLStreamReaderFactory {
 
-        private final ThreadLocal<XMLInputFactory> xif = new ThreadLocal<XMLInputFactory>() {
+        private final ThreadLocal<XMLInputFactory> xif = new ThreadLocal<>() {
             @Override
             public XMLInputFactory initialValue() {
                 return getXMLInputFactory();
             }
         };
+
+        /**
+         * Default constructor.
+         */
+        public Default() {}
 
         @Override
         public XMLStreamReader doCreate(String systemId, InputStream in, boolean rejectDTDs) {
@@ -482,9 +488,8 @@ public abstract class XMLStreamReaderFactory {
             }
 
             if (xif.isPropertySupported(P_MAX_ATTRIBUTES_PER_ELEMENT)) {
-                maxAttributesPerElement = Integer.valueOf(buildIntegerValue(
-                    PROPERTY_MAX_ATTRIBUTES_PER_ELEMENT, DEFAULT_MAX_ATTRIBUTES_PER_ELEMENT)
-                );
+                maxAttributesPerElement = buildIntegerValue(
+                        PROPERTY_MAX_ATTRIBUTES_PER_ELEMENT, DEFAULT_MAX_ATTRIBUTES_PER_ELEMENT);
                 xif.setProperty(P_MAX_ATTRIBUTES_PER_ELEMENT, maxAttributesPerElement);
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(Level.FINE, P_MAX_ATTRIBUTES_PER_ELEMENT + " is {0}", maxAttributesPerElement);
@@ -492,9 +497,8 @@ public abstract class XMLStreamReaderFactory {
             }
 
             if (xif.isPropertySupported(P_MAX_ATTRIBUTE_SIZE)) {
-                maxAttributeSize = Integer.valueOf(buildIntegerValue(
-                    PROPERTY_MAX_ATTRIBUTE_SIZE, DEFAULT_MAX_ATTRIBUTE_SIZE)
-                );
+                maxAttributeSize = buildIntegerValue(
+                        PROPERTY_MAX_ATTRIBUTE_SIZE, DEFAULT_MAX_ATTRIBUTE_SIZE);
                 xif.setProperty(P_MAX_ATTRIBUTE_SIZE, maxAttributeSize);
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(Level.FINE, P_MAX_ATTRIBUTE_SIZE + " is {0}", maxAttributeSize);
@@ -502,9 +506,8 @@ public abstract class XMLStreamReaderFactory {
             }
 
             if (xif.isPropertySupported(P_MAX_CHILDREN_PER_ELEMENT)) {
-                maxChildrenPerElement = Integer.valueOf(buildIntegerValue(
-                    PROPERTY_MAX_CHILDREN_PER_ELEMENT, DEFAULT_MAX_CHILDREN_PER_ELEMENT)
-                );
+                maxChildrenPerElement = buildIntegerValue(
+                        PROPERTY_MAX_CHILDREN_PER_ELEMENT, DEFAULT_MAX_CHILDREN_PER_ELEMENT);
                 xif.setProperty(P_MAX_CHILDREN_PER_ELEMENT, maxChildrenPerElement);
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(Level.FINE, P_MAX_CHILDREN_PER_ELEMENT + " is {0}", maxChildrenPerElement);
@@ -512,9 +515,8 @@ public abstract class XMLStreamReaderFactory {
             }
 
             if (xif.isPropertySupported(P_MAX_ELEMENT_DEPTH)) {
-                maxElementDepth = Integer.valueOf(buildIntegerValue(
-                    PROPERTY_MAX_ELEMENT_DEPTH, DEFAULT_MAX_ELEMENT_DEPTH)
-                );
+                maxElementDepth = buildIntegerValue(
+                        PROPERTY_MAX_ELEMENT_DEPTH, DEFAULT_MAX_ELEMENT_DEPTH);
                 xif.setProperty(P_MAX_ELEMENT_DEPTH, maxElementDepth);
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(Level.FINE, P_MAX_ELEMENT_DEPTH + " is {0}", maxElementDepth);
@@ -522,9 +524,8 @@ public abstract class XMLStreamReaderFactory {
             }
 
             if (xif.isPropertySupported(P_MAX_ELEMENT_COUNT)) {
-                maxElementCount = Long.valueOf(buildLongValue(
-                    PROPERTY_MAX_ELEMENT_COUNT, DEFAULT_MAX_ELEMENT_COUNT)
-                );
+                maxElementCount = buildLongValue(
+                        PROPERTY_MAX_ELEMENT_COUNT, DEFAULT_MAX_ELEMENT_COUNT);
                 xif.setProperty(P_MAX_ELEMENT_COUNT, maxElementCount);
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(Level.FINE, P_MAX_ELEMENT_COUNT + " is {0}", maxElementCount);
@@ -532,9 +533,8 @@ public abstract class XMLStreamReaderFactory {
             }
 
             if (xif.isPropertySupported(P_MAX_CHARACTERS)) {
-                maxCharacters = Long.valueOf(buildLongValue(
-                    PROPERTY_MAX_CHARACTERS, DEFAULT_MAX_CHARACTERS)
-                );
+                maxCharacters = buildLongValue(
+                        PROPERTY_MAX_CHARACTERS, DEFAULT_MAX_CHARACTERS);
                 xif.setProperty(P_MAX_CHARACTERS, maxCharacters);
                 if (LOGGER.isLoggable(Level.FINE)) {
                     LOGGER.log(Level.FINE, P_MAX_CHARACTERS + " is {0}", maxCharacters);
@@ -570,7 +570,7 @@ public abstract class XMLStreamReaderFactory {
         String propVal = System.getProperty(propertyName);
         if (propVal != null && propVal.length() > 0) {
             try {
-                Integer value = Integer.parseInt(propVal);
+                int value = Integer.parseInt(propVal);
                 if (value > 0) {
                     // return with the value in System property
                     return value;
@@ -607,13 +607,13 @@ public abstract class XMLStreamReaderFactory {
     
     private static Boolean getProperty(final String prop) {
         return AccessController.doPrivileged(
-            new java.security.PrivilegedAction<Boolean>() {
-                @Override
-                public Boolean run() {
-                    String value = System.getProperty(prop);
-                    return value != null ? Boolean.valueOf(value) : Boolean.FALSE;
+                new java.security.PrivilegedAction<>() {
+                    @Override
+                    public Boolean run() {
+                        String value = System.getProperty(prop);
+                        return value != null ? Boolean.valueOf(value) : Boolean.FALSE;
+                    }
                 }
-            }
         );        
     }
 
