@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -47,6 +47,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Type;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
@@ -88,7 +89,7 @@ public abstract class ResponseBuilder {
             this.bridge = bridge;
             this.setter = setter;
         }
-        final Object readResponse(Object[] args, XMLStreamReader r, AttachmentSet att) throws JAXBException {
+        Object readResponse(Object[] args, XMLStreamReader r, AttachmentSet att) throws JAXBException {
             Object obj;
             AttachmentUnmarshallerImpl au = (att != null)?new AttachmentUnmarshallerImpl(att):null;
             if (bridge instanceof RepeatedElementBridge) {
@@ -107,7 +108,7 @@ public abstract class ResponseBuilder {
         }
     }
     /**
-     * {@link ResponseBuilder.PartBuilder} keyed by the element name (inside the wrapper element.)
+     * {@code ResponseBuilder.PartBuilder} keyed by the element name (inside the wrapper element.)
      */
     protected Map<QName,WrappedPartBuilder> wrappedParts = null;
     protected QName wrapperName;
@@ -180,11 +181,11 @@ public abstract class ResponseBuilder {
         return primitiveUninitializedValues.get(type);
     }
 
-    private static final Map<Class,Object> primitiveUninitializedValues = new HashMap<Class, Object>();
+    private static final Map<Class,Object> primitiveUninitializedValues = new HashMap<>();
 
     static {
         Map<Class, Object> m = primitiveUninitializedValues;
-        m.put(int.class,(int)0);
+        m.put(int.class, 0);
         m.put(char.class,(char)0);
         m.put(byte.class,(byte)0);
         m.put(short.class,(short)0);
@@ -234,7 +235,7 @@ public abstract class ResponseBuilder {
         }
 
         public Composite(Collection<? extends ResponseBuilder> builders) {
-            this(builders.toArray(new ResponseBuilder[builders.size()]));
+            this(builders.toArray(new ResponseBuilder[0]));
         }
 
         @Override
@@ -438,7 +439,7 @@ public abstract class ResponseBuilder {
      * </PRE>
      *
      * So a wsdl:part fooPart will be encoded as:
-     *      <fooPart=somereallybignumberlikeauuid@example.com>
+     *      {@code <fooPart=somereallybignumberlikeauuid@example.com>}
      *
      * @return null
      *      if the parsing fails.
@@ -447,20 +448,16 @@ public abstract class ResponseBuilder {
     public static final String getWSDLPartName(com.sun.xml.ws.api.message.Attachment att){
         String cId = att.getContentId();
 
-        int index = cId.lastIndexOf('@', cId.length());
+        int index = cId.lastIndexOf('@');
         if(index == -1){
             return null;
         }
         String localPart = cId.substring(0, index);
-        index = localPart.lastIndexOf('=', localPart.length());
+        index = localPart.lastIndexOf('=');
         if(index == -1){
             return null;
         }
-        try {
-            return java.net.URLDecoder.decode(localPart.substring(0, index), "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new WebServiceException(e);
-        }
+        return java.net.URLDecoder.decode(localPart.substring(0, index), StandardCharsets.UTF_8);
     }
 
 
@@ -573,7 +570,7 @@ public abstract class ResponseBuilder {
             Class wrapperType = (Class) wrapper.getTypeInfo().type;     
             dynamicWrapper = WrapperComposite.class.equals(wrapperType);
 
-            List<PartBuilder> tempParts = new ArrayList<PartBuilder>();
+            List<PartBuilder> tempParts = new ArrayList<>();
 
             List<ParameterImpl> children = wp.getWrapperChildren();
             for (ParameterImpl p : children) {
@@ -581,7 +578,7 @@ public abstract class ResponseBuilder {
                     continue;
                 QName name = p.getName();
                 if (dynamicWrapper) {
-                    if (wrappedParts == null) wrappedParts = new HashMap<QName,WrappedPartBuilder>();
+                    if (wrappedParts == null) wrappedParts = new HashMap<>();
                     XMLBridge xmlBridge = p.getInlinedRepeatedElementBridge();
                     if (xmlBridge == null) xmlBridge = p.getXMLBridge();
                     wrappedParts.put( p.getName(), new WrappedPartBuilder(xmlBridge, setterFactory.get(p)));
@@ -603,7 +600,7 @@ public abstract class ResponseBuilder {
                     }
                 }
             }
-            this.parts = tempParts.toArray(new PartBuilder[tempParts.size()]);
+            this.parts = tempParts.toArray(new PartBuilder[0]);
         }
 
         @Override
@@ -665,7 +662,7 @@ public abstract class ResponseBuilder {
                 assert accessor!=null && setter!=null;
             }
 
-            final Object readResponse( Object[] args, Object wrapperBean ) {
+            Object readResponse( Object[] args, Object wrapperBean ) {
                 Object obj = accessor.get(wrapperBean);
                 return setter.put(obj,args);
             }
@@ -682,7 +679,7 @@ public abstract class ResponseBuilder {
         public RpcLit(WrapperParameter wp, ValueSetterFactory setterFactory) {
             assert wp.getTypeInfo().type== WrapperComposite.class;
             wrapperName = wp.getName();
-            wrappedParts = new HashMap<QName,WrappedPartBuilder>();
+            wrappedParts = new HashMap<>();
             List<ParameterImpl> children = wp.getWrapperChildren();
             for (ParameterImpl p : children) {
                 wrappedParts.put( p.getName(), new WrappedPartBuilder(
