@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -85,12 +85,14 @@ public class StubAsyncHandler extends StubHandler {
        
     }
 	
-	protected void initArgs(Object[] args) throws Exception {
+	@Override
+    protected void initArgs(Object[] args) throws Exception {
         if (asyncBeanClass != null) {
-            args[0] = asyncBeanClass.newInstance();
+            args[0] = asyncBeanClass.getConstructor().newInstance();
         }
 	}
 
+    @Override
     ValueGetterFactory getValueGetterFactory() {
         return ValueGetterFactory.ASYNC;
     }
