@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -20,6 +20,7 @@ import com.sun.xml.ws.spi.db.XMLBridge;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
 import jakarta.activation.DataHandler;
 import javax.xml.transform.Source;
@@ -66,11 +67,7 @@ public abstract class MessageFiller {
             this.param = param;
             this.getter = getter;
             mimeType = param.getBinding().getMimeType();
-            try {
-                contentIdPart = URLEncoder.encode(param.getPartName(), "UTF-8")+'=';
-            } catch (UnsupportedEncodingException e) {
-                throw new WebServiceException(e);
-            }
+            contentIdPart = URLEncoder.encode(param.getPartName(), StandardCharsets.UTF_8)+'=';
         }
         
         /**
@@ -105,6 +102,7 @@ public abstract class MessageFiller {
             super(param, getter);
         }
         
+        @Override
         public void fillIn(Object[] methodArgs, Object returnValue, Message msg) {
             String contentId = getContentId();
             Object obj = (methodPos == -1) ? returnValue : getter.get(methodArgs[methodPos]);
@@ -120,6 +118,7 @@ public abstract class MessageFiller {
             super(param, getter);
         }
         
+        @Override
         public void fillIn(Object[] methodArgs, Object returnValue, Message msg) {
             String contentId = getContentId();
             Object obj = (methodPos == -1) ? returnValue : getter.get(methodArgs[methodPos]);
@@ -134,6 +133,7 @@ public abstract class MessageFiller {
             super(param, getter);
         }
         
+        @Override
         public void fillIn(Object[] methodArgs, Object returnValue, Message msg) {
             String contentId = getContentId();
             Object obj = (methodPos == -1) ? returnValue : getter.get(methodArgs[methodPos]);
@@ -155,6 +155,7 @@ public abstract class MessageFiller {
             this.getter = getter;
         }
 
+        @Override
         public void fillIn(Object[] methodArgs, Object returnValue, Message msg) {
             Object value = (methodPos == -1) ? returnValue : getter.get(methodArgs[methodPos]);
             msg.getHeaders().add(Headers.create(bridge,value));
