@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -148,7 +148,7 @@ public class EchoImpl {
 
     @WebMethod
     public String echoOutHeader(int age, @WebParam(name="num", mode=WebParam.Mode.OUT, header=true)Holder<Long> num, String str) {
-        num.value = new Long(age);;
+        num.value = Long.valueOf(age);;
         return str+num.value;
     }
 
