@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2020 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2022 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -28,7 +28,7 @@ public class AntExecutor {
     private static String DEBUG_PORT = "5432";
     private static boolean PROFILE = Boolean.getBoolean("anttasks.profile");
 
-    public static int exec(File script, File endorsedDir, String... targets) throws IOException {
+    public static int exec(File script, String... targets) throws IOException {
         File heapDump = null;
         List<String> cmd = new ArrayList<String>();
         cmd.add("java");
@@ -40,14 +40,14 @@ public class AntExecutor {
             heapDump = File.createTempFile(script.getName(), ".hprof", new File(System.getProperty("user.home")));
             cmd.add("-agentlib:hprof=heap=dump,file=" + heapDump.getAbsolutePath() + ",format=b");
         }
-        if (!WsAntTaskTestBase.is9()) {
-            cmd.add("-Djava.endorsed.dirs=" + endorsedDir.getAbsolutePath());
-        }
         cmd.add("-Dbin.folder=" + System.getProperty("bin.folder"));
 //        cmd.add("-Djaxp.debug=true");
         //dump coverage data:
-        if (System.getProperty("jacoco-agent.destfile") != null) {
-            cmd.add("-Djacoco-agent.destfile=" + System.getProperty("jacoco-agent.destfile"));
+        if (System.getProperty("coverage") != null && !System.getProperty("coverage").isEmpty()) {
+            //for forked processes
+            cmd.add("-Dcoverage=" + System.getProperty("coverage"));
+            //for tasks called by ant
+            cmd.add(System.getProperty("coverage"));
         }
         cmd.add("-cp");
         cmd.add(getAntCP(new File(System.getProperty("bin.folder"), "lib/ant")));
